[package]
name = "NTxVentures"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.4"
serde = "1.0.126"
serde-xml-rs = "0.4.1"
serde_derive = "1.0.126"
serde_json = "1.0.66"
json = "0.12.4"
futures = "0.3.16"
tokio = "1.9.0"